--- a/csharp/TennisRefactoringKata.Tests/TennisRefactoringKata.Tests.csproj
+++ b/csharp/TennisRefactoringKata.Tests/TennisRefactoringKata.Tests.csproj
@@ -35,6 +35,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TennisRefactoringKata\TennisRefactoringKata.csproj">
